<resources>
    <string name="app_name">TravelMe</string>
    <string name="connection_time_startplace">Ab</string>
    <string name="connection_time_targetplace">An</string>
    <string name="about">About</string>
    <string name="connection_umsteigen">Umsteigen</string>
    <string name="connection_dauer">Dauer</string>
    <string name="connection_startplace">von</string>
    <string name="connection_targetplace">nach</string>
    <string name="connection_hint_changeVonNach">Wechsle Start- und Zielort</string>
    <string name="connection_hint_addFavorite">zu Favoriten hinzufügen?</string>
    <string name="connection_result_noConnections">Keine Verbindungen gefunden</string>
    <string name="main_hint_search">Suche Verbindungen</string>
    <string name="main_hint_delFavorite">Lösche diesen Favoriten</string>
    <string name="main_favorites">Favoriten</string>
    <string name="main_noFavorites">Keine Favoriten gespeichert</string>

    <string name="daniel_mail"><a href="danielkaufman@outlook.com?Subject=MAS_SE2014%Mobile%Apps" target="_top">danielkaufmann@outlook.com</a></string>
    <string name="marco_mail"><a href="marco.loher@gmail.com?Subject=MAS_SE2014%Mobile%Apps" target="_top">marco.loher@gmail.com</a></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
