<?xml version="1.0" encoding="utf-8"?>
<!-- Quelle:
http://developer.android.com/training/improving-layouts/reusing-layouts.html
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/travel1connection"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/connection_time_startplace"
        android:id="@+id/lblAb"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="HH:mm"
        android:id="@+id/textAb"
        android:layout_below="@+id/lblAb"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/connection_time_targetplace"
        android:id="@+id/lblAn"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textAb"
        android:layout_toEndOf="@+id/textAb" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="HH:mm"
        android:id="@+id/textAn"
        android:layout_alignTop="@+id/textAb"
        android:layout_toRightOf="@+id/textAb"
        android:layout_toEndOf="@+id/textAb" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/connection_umsteigen"
        android:id="@+id/lblNofUmsteigen"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textAn"
        android:layout_toEndOf="@+id/textAn" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="# x"
        android:id="@+id/textNofUmsteigen"
        android:layout_below="@+id/lblNofUmsteigen"
        android:layout_toRightOf="@+id/textAn"
        android:layout_toEndOf="@+id/textAn" />
</RelativeLayout>
