<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.daniel.travelme.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/travelNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        tools:context=".ConnectionActivity">

        <ImageButton
            android:id="@+id/btnSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/travelSettings"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/main_hint_search"
            android:src="@android:drawable/ic_search_category_default" />

        <include
            android:id="@+id/travelSettings"
            layout="@layout/layout_von_nach"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@id/btnSearch"
            android:layout_toRightOf="@+id/btnSearch" />
    </RelativeLayout>

    <TextView
        android:id="@+id/lblFavorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/travelNavigation"
        android:text="@string/main_favorites"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="visible" />

    <TextView
        android:id="@+id/lblNoFavorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblFavorites"
        android:text="@string/main_noFavorites"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="visible" />

    <ListView
        android:id="@+id/listFavorites"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lblFavorites" />
</RelativeLayout>
